API Put Notif Id

--- a/docs/api-docs.yaml
+++ b/docs/api-docs.yaml
@@ -1591,15 +1591,15 @@ paths:
       security:
         - bearerAuth: []
 
-  /notifications/markAsRead:
+  /notifications/markAsRead/all:
     put:
       tags:
         - "Notification"
-      summary: Update Status notification
-      description: Update Status notification
+      summary: Mark all notifications as read
+      description: Marks all notifications as read for the logged-in user.
       responses:
         "200":
-          description: Success
+          description: Notifications marked as read successfully
           content:
             application/json:
               schema:
@@ -1617,6 +1617,68 @@ paths:
                       count:
                         type: integer
                         example: 2
+      security:
+        - bearerAuth: []
+
+  /notification/markAsRead/{notificationId}:
+    put:
+      tags:
+        - "Notification"
+      summary: "Mark a specific notification as read"
+      description: "Marks a specific notification as read for the logged-in user, identified by the notification ID."
+      parameters:
+        - in: path
+          name: notificationId
+          required: true
+          schema:
+            type: integer
+          description: "The ID of the notification to mark as read"
+      responses:
+        200:
+          description: "Notification marked as read successfully"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: "Notification marked as read"
+                  data:
+                    $ref: "#/components/schemas/Notification"
+        400:
+          description: "Notification ID is required"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Notification ID is required"
+                  data:
+                    example: null
+        404:
+          description: "Notification not found"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Notification not found"
+                  data:
+                    example: null
       security:
         - bearerAuth: []
 
@@ -1815,7 +1877,7 @@ paths:
                     example: false
                   message:
                     type: string
-                    example: "Order not found"
+                    example: "Payment not found"
       security:
         - bearerAuth: []
 
