--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "~4.16.1",
     "googleapis": "^137.1.0",
     "imagekit": "^5.0.1",
+    "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "midtrans-client": "^1.3.1",
     "morgan": "~1.9.1",
