--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "path": "^0.12.7",
     "pnpm": "^9.2.0",
     "prisma": "^5.14.0",
+    "qr-image": "^3.2.0",
     "swagger-ui-express": "^5.0.0",
     "yaml": "^2.4.2"
   }
