--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -32,10 +32,10 @@ jobs:
           export DATABASE_URL="${{ secrets.DEV_DATABASE_URL }}"
           npx prisma migrate deploy
 
-      - name: Run Seeder
-        run: |
-          export DATABASE_URL="${{ secrets.DEV_DATABASE_URL }}"
-          npx prisma db seed
+      # - name: Run Seeder
+      #   run: |
+      #     export DATABASE_URL="${{ secrets.DEV_DATABASE_URL }}"
+      #     npx prisma db seed
 
       - name: Deploy to Railway
         run: railway up --service ${{ secrets.RAILWAY_SERVICE_ID }}
