--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ PAYMENT_DEV_SERVER_KEY=""
 PAYMENT_DEV_CLIENT_KEY=""
 PAYMENT_PROD_SERVER_KEY=""
 PAYMENT_PROD_CLIENT_KEY=""
+
+ENVIRONTMENT=""
+SENTRY_DSN=""
